--- a/.github/workflows/01-first-workflow.yml
+++ b/.github/workflows/01-first-workflow.yml
@@ -1,18 +1,13 @@
-name: primeiro CI
+name: 01 primeiro CI
 
 on:
-    push:
+   push:
       branches: [ "main" ]
-
-    workflow_dispatch:
-
+   workflow_dispatch:
 jobs:
-
-    first-job:
-
-        runs-on: ubuntu-latest
-
-        steps:
+  primeiro-job:
+     runs-on: ubuntu-latest
+     steps:
         - name: Mensagem
          run: echo "Bom Dia!"
         - name: Mostra o diretório de trabalho
