--- a/.github/workflows/01-first-workflow.yml
+++ b/.github/workflows/01-first-workflow.yml
@@ -1,17 +1,19 @@
-name: 01 primeiro CI
+name: 01 Primeiro CI
 
 on:
-   push:
-      branches: [ "main" ]
-   workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  
+  workflow_dispatch:
+
 jobs:
   primeiro-job:
-     runs-on: ubuntu-latest
-     steps:
-        - name: Mensagem
-         run: echo "Bom Dia!"
-        - name: Mostra o diretório de trabalho
-         run: pwd
-        - name: Lista arquivos do dir
-         run: ls -a
-                
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Imprime uma mensagem
+        run: echo "bom dia"
+      - name: Mostra o diretório de trabalho
+        run: pwd
+      - name: Lista os arquivos do diretório
+        run: ls ~ -a
