--- a/.github/workflows/01-first-workflow.yml
+++ b/.github/workflows/01-first-workflow.yml
@@ -2,7 +2,9 @@ name: 01 Primeiro CI
 
 on:
   push:
-    branches-ignore: [ "main" ]
+    branches: [ "main" ]
+    paths-ignore: 
+      - 'README.md'
   
   workflow_dispatch:
 
